--- a/index.html
+++ b/index.html
@@ -1,12 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home Page</title>
+    <link rel="stylesheet" href="style/main.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
 </head>
 <body>
-    <h1>main</h1>
-    <p>ertghjk</p>
+    <header>
+        <p class="para">Free Delivery On all $50+ orders</p>
+        <div class="header">
+            <div class="left">
+               <!-- <h1>MaCa</h1> -->
+                <img src="photo/logo2.png" alt="">
+                <div class="link">
+                    <a href="index.html" id="active">Home</a>
+                    <a href="page/shop-page.html">Shop</a>
+                    <a href="page/about-page.html">About</a>
+                    <a href="page/contact-page.html">Contact</a>
+                </div>
+            </div>
+            <div class="right">
+                <span class="material-symbols-outlined " id="icon-nav">
+                    shopping_cart
+                </span>
+            </div>
+        </div>
+    </header>
+    <main class="main-home">
+        <button class="btn-shop"><a href="page/shop-page.html">Shop Now</a></button>
+        <div class="text-main">
+            <h1>Glow Naturally <br>Every Day</h1>
+        </div>
+    </main>
+    <section>
+        <h1>Shop Our Best Sellers</h1>
+        <div class="top-sell">
+            <div class="card">
+                <img src="photo/image1.png" alt="" id="image1">
+                <div class="icon-text">
+                    <span class="material-symbols-outlined" id="icon-card">
+                        star
+                    </span>
+                    <span class="material-symbols-outlined" id="icon-card">
+                        star
+                    </span>
+                    <span class="material-symbols-outlined" id="icon-card">
+                        star
+                    </span>
+                    <p>Hydrating Serum</p>
+                    <p>$24.00</p>
+                </div>
+
+            </div>
+            <div class="card">
+                <img src="photo/image5.png" alt="" id="image4">
+                <div class="icon-text">
+                    <span class="material-symbols-outlined" id="icon-card">
+                        star
+                    </span>
+                    <span class="material-symbols-outlined" id="icon-card">
+                        star
+                    </span>
+                    <span class="material-symbols-outlined" id="icon-card">
+                        star
+                    </span>
+                    <p>Clay Mask</p>
+                    <p>$23.89</p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="photo/image6.png" alt="" id="image6">
+                <div class="icon-text">
+                    <span class="material-symbols-outlined" id="icon-card">
+                        star
+                    </span>
+                    <span class="material-symbols-outlined" id="icon-card">
+                        star
+                    </span>
+                    <span class="material-symbols-outlined" id="icon-card">
+                        star
+                    </span>
+                    <p>Body Lotion</p>
+                    <p>$28.00</p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="photo/image7.png" alt="" id="image4">
+                <div class="icon-text">
+                    <span class="material-symbols-outlined" id="icon-card">
+                        star
+                    </span>
+                    <span class="material-symbols-outlined" id="icon-card">
+                        star
+                    </span>
+                    <span class="material-symbols-outlined" id="icon-card">
+                        star
+                    </span>
+                    <p>Clay Mask</p>
+                    <p>$17.79</p>
+                </div>
+            </div>
+        </div>
+        </div>
+        <div class="text-footer">
+            <div class="text">
+                <h4><span class="icon-self">🧴</span>Self Formules</h4>
+                <p>We make sure everything we sell is organic, high <br> quality and gentle on the skin.</p>
+            </div>
+            <div class="text">
+                <h4><span class="icon-self">🏆</span>Highly Effective</h4>
+                <p>Our skin care products have been created and <br>tested by us to get you noticeable results.</p>
+            </div>
+            <div class="text">
+                <h4><span class="icon-self">💚</span>Ethically Sourced</h4>
+                <p>You can sleep easy knowing we only use ethically <br>sourced natural raw materials.</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="text-footershop">
+            <div class="footer">
+                <div class="last-left">
+                    <h3>About Us</h3>
+                    <p>We believe that what you put on your skin matters that’s why every formula is crafted with
+                        clean,
+                        ethically sourced ingredients known for their natural potency.</p>
+                    <div class="icon-shop">
+                        <img src="photo/fb.png" alt="" id="image-footer">
+                        <img src="photo/lik.png" alt="" id="image-footer">
+                        <img src="photo/twi.png" alt="" id="image-footer">
+                        <img src="photo/insta.png" alt="" id="image-footer">
+                    </div>
+                </div>
+                <div class="last-center">
+                    <h3>Quick Links</h3>
+                    <div class="quick">
+                        <a href="index.html" id="active">Home</a>
+                        <a href="page/shop-page.html">Shop</a>
+                        <a href="page/about-page.html">About</a>
+                        <a href="page/contact-page.html">Contact</a>
+                    </div>
+                </div>
+                <div class="right">
+                    <h3>Contacts</h3>
+                    <div class="info">
+                        <div class="icon-foot">
+                            <span class="material-symbols-outlined">
+                            location_on
+                            </span> 
+                             <p>Street 371, Phnom Penh.</p>
+                        </div>
+                        <div class="icon-foot">
+                            <span class="material-symbols-outlined">
+                            call
+                            </span>
+                            <p>+885964523167</p>
+                        </div>
+                        <div class="icon-foot">
+                            <span class="material-symbols-outlined">
+                            mail
+                            </span>
+                            <p>Maca stor@email.com</p>
+                        </div>      
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
